--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My HTML Test Page</title>
-    <link rel="stylesheet" type="text/css" href="loading.css">
   </head>
   <body>
-    <div class="loader"></div>
+    <i>斜体文本</i><br><br>
 </html>
