--- a/main_page.html
+++ b/main_page.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="UTF-8">
     <title>My HTML Test Page</title>
+    <link rel="stylesheet" type="text/css" href="loading.css">
   </head>
   <body>
-    <i>斜体文本</i><br><br>
+    <div class="loader"></div>
 </html>
