--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <link rel="stylesheet" type="text/css" href="loading.css">
   </head>
   <body>
+    <a href="https://www.youtube.com">看视频多好</a>
     <div class="loader"></div>
 </html>
