--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <link rel="stylesheet" type="text/css" href="loading.css">
   </head>
   <body>
-    <a href="https://www.youtube.com" id="video">看视频多好</a>
+    <a href="https://www.youtube.com" id="video" title="好好学习不要水课">STUDY!</a>
     <div class="loader"></div>
+    <a href="#" class="button button--bird">
+      <div class="button__wrapper">
+          <span class="button__text">ENTRY</span>
+      </div>
+      <div class="birdBox">
+          <div class="bird">
+              <div class="bird__face"></div>
+          </div>
+          <div class="bird">
+              <div class="bird__face"></div>
+          </div>
+          <div class="bird">
+              <div class="bird__face"></div>
+          </div>
+      </div>
+      <div class="birdBox">
+        <div class="bird wakeup">
+            <div class="bird__face"></div>
+        </div>
+        <div class="bird wakeup">
+            <div class="bird__face"></div>
+        </div>
+        <div class="bird">
+            <div class="bird__face"></div>
+        </div>
+    </div>
+  </a>
 </html>
