--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </head>
   <body>
     <a href="https://www.youtube.com" id="video" title="好好学习不要水课">STUDY!</a>
+    <a href="https://www.gradescope.com/" id="CS61B" title="courses">CS61B</a>
     <div class="loader"></div>
-    <a href="#" class="button button--bird">
+    <a href="https://csdiy.wiki/" class="button button--bird">
       <div class="button__wrapper">
           <span class="button__text">ENTRY</span>
       </div>
