--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="loading.css">
   </head>
   <body>
-    <a href="inside_blog/" id="markdown1" title="好好学习不要水课">STUDY!</a>
+    <a href="inside_blog/" id="video" title="好好学习不要水课">STUDY!</a>
     <a href="https://www.gradescope.com/" id="CS61B" title="courses">CS61B</a>
     <div class="loader"></div>
     <a href="https://sp21.datastructur.es/" class="button button--bird">
