--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   </head>
   <body>
     <a href="inside_blog/" id="video" title="好好学习不要水课">STUDY!</a>
-    <a href="live_note/"
     <a href="https://www.gradescope.com/" id="CS61B" title="courses">CS61B</a>
-    <div class="loader"></div>
+    <div href="live_note/" class="loader"></div>
     <a href="https://sp21.datastructur.es/" class="button button--bird">
       <div class="button__wrapper">
           <span class="button__text">ENTRY</span>
@@ -35,5 +34,7 @@
             <div class="bird__face"></div>
         </div>
     </div>
+    <a href="https://www.coursera.com" id="algorithm" title="COURSERA">COURSERA</a> 
+    <a href="https://www.edx.com" id="casual" title="edx">EDX</a>
   </a>
 </html>
