--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <a href="inside_blog/" id="video" title="好好学习不要水课">STUDY!</a>
     <a href="https://www.gradescope.com/" id="CS61B" title="courses">CS61B</a>
     <div href="live_note/" class="loader"></div>
+    <a href="https://www.coursera.org/" id="button2" title="COURSERA">COURSERA</a>
     <a href="https://sp21.datastructur.es/" class="button button--bird">
       <div class="button__wrapper">
           <span class="button__text">ENTRY</span>
