--- a/index.html
+++ b/index.html
@@ -2,40 +2,16 @@
   <head>
     <meta charset="UTF-8">
     <title>My HTML Test Page</title>
-    <link rel="stylesheet" type="text/css" href="loading.css">
+    <!-- Inside a subdirectory called styles inside the current directory -->
+    <link rel="stylesheet" href="loading.css">
   </head>
-  <body>
-    <a href="inside_blog/" id="video" title="好好学习不要水课">STUDY!</a>
-    <a href="https://www.gradescope.com/" id="CS61B" title="courses">CS61B</a>
-    <div href="live_note/" class="loader"></div>
-    <a href="https://www.coursera.org/" id="button2" title="COURSERA">COURSERA</a>
-    <a href="https://sp21.datastructur.es/" class="button button--bird">
-      <div class="button__wrapper">
-          <span class="button__text">ENTRY</span>
-      </div>
-      <div class="birdBox">
-          <div class="bird">
-              <div class="bird__face"></div>
-          </div>
-          <div class="bird">
-              <div class="bird__face"></div>
-          </div>
-          <div class="bird">
-              <div class="bird__face"></div>
-          </div>
-      </div>
-      <div class="birdBox">
-        <div class="bird wakeup">
-            <div class="bird__face"></div>
-        </div>
-        <div class="bird wakeup">
-            <div class="bird__face"></div>
-        </div>
-        <div class="bird">
-            <div class="bird__face"></div>
-        </div>
-    </div>
-    <a href="https://www.coursera.com" id="algorithm" title="COURSERA">COURSERA</a> 
-    <a href="https://www.edx.com" id="casual" title="edx">EDX</a>
-  </a>
+  <body background="hello.jpg">
+    <!--  get a button link to www.cousera.com and make the button in a css style-->
+    <a href="http://www.coursera.org" target="_blank">
+      <button class="button button-buttonmain">Coursera</button> 
+    </a>
+    <a href="https://sp21.datastructur.es/">
+      <button class="button button-buttonsub">Data Structure</button>
+    </a>
+  </body>
 </html>
