brand new pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <a href="http://www.coursera.org" target="_blank">
       <button class="button button-buttonmain">Coursera</button> 
     </a>
-    <a href="https://sp21.datastructur.es/">
+    <a href="https://sp21.datastructur.es/" target="_blank">
       <button class="button button-buttonsub">Data Structure</button>
     </a>
+    <a href="https://csdiy.wiki/" target="_blank">
+      <button class="button button-buttonsub2">CSDIY</button>
+    </a>
+    <a href="https://www.bilibili.com/video/BV1JE411w7Ub/?vd_source=cec3df857ded7ccdd234805aeaaf8f3f" target="_blank">
+      <button class="button button-buttonsub3">CS229</button>
+    </a>
+    <!--link a Markdown to the page-->
+    <a href="/inside_blog/README.md" target="_blank">
+      <button class="button button-buttonsub4">README</button>
   </body>
 </html>
