brand new pages

--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
     <!--link a Markdown to the page-->
     <a href="/inside_blog/README.md" target="_blank">
       <button class="button button-buttonsub4">README</button>
+    </a>
+    <a href="/inside_blog/index.md">
+      <button class="button button-buttonsub5">index</button>
+    </a>
   </body>
 </html>
