brand new pages

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <a href="/inside_blog/index.md">
       <button class="button button-buttonsub5">index</button>
     </a>
+    <form action="https://www.baidu.com/s">
+      <input type="text" name="wd"/><input type="submit"  value="百度一下"/>
+    </form>
   </body>
 </html>
