--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="/inside_blog/README.md" target="_blank">
       <button class="button button-buttonsub4">README</button>
     </a>
-    <a href="/inside_blog/index.md">
+    <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
     <form action="https://www.baidu.com/s">
