brand new pages

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
-    <form action="https://www.baidu.com/s">
-      <input type="text" name="wd"/><input type="submit"  value="百度一下"/>
+    <form action="https://www.baidu.com/s" class="form">
+      <input type="text" name="wd"/ class="input"><input type="submit"  value="Google"/>
     </form>
   </body>
 </html>
