--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
-    <form action="https://www.baidu.com/s" class="form">
-      <input type="text" name="wd"/ class="input"><input type="submit"  value="Google"/>
+    <form action="https://www.google.com/s" class="form">
+      <input type="text" name="wd"/ class="input"></input>
+      <input type="submit"  value="Google" class="btn"></input>
     </form>
   </body>
 </html>
