brand new pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
-    <form action="https://www.google.com/s" class="form">
+    <form action="https://www.google.com.hk" class="form">
       <input type="text" name="wd"/ class="input"></input>
       <input type="submit"  value="Google" class="btn"></input>
     </form>
