brand new pages

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
-    <form action="https://www.google.com.hk" class="form">
+    <script async src="https://cse.google.com/cse.js?cx=903ddd18d53d949e4">
+    </script>
+    <form action="https://cse.google.com/cse?cx=903ddd18d53d949e4" class="form">
       <input type="text" name="wd"/ class="input"></input>
       <input type="submit"  value="Google" class="btn"></input>
     </form>
+    </a>
   </body>
 </html>
