brand new pages

--- a/inside_blog/index.html
+++ b/inside_blog/index.html
@@ -5,7 +5,7 @@
     <!-- Inside a subdirectory called styles inside the current directory -->
     <link rel="stylesheet" href="index.css">
 </head>
-<body background="background.png" >
+<body background="background.jpg" >
 <a href="https://www.coursera.org/learn/algorithms-part1/home/week/1">
     <button class="button button-buttonmain">
         Algorithm
