brand new pages

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <script async src="https://cse.google.com/cse.js?cx=903ddd18d53d949e4">
     </script>
     <form action="https://cse.google.com/cse?cx=903ddd18d53d949e4" class="form">
-      <input type="text" name="wd"/ class="input"></input>
+      <input type="text" name="wd" class="input"></input>
       <input type="submit"  value="Google" class="btn"></input>
     </form>
     </a>
+    <a href="live_note/note&skills.html">
+      <button class="button button-buttonsub6">my notes</button>
   </body>
 </html>
