brand new pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Inside a subdirectory called styles inside the current directory -->
     <link rel="stylesheet" href="loading.css">
   </head>
-  <body background="hello.jpg">
+  <body>
     <!--  get a button link to www.cousera.com and make the button in a css style-->
     <a href="http://www.coursera.org" target="_blank">
       <button class="button button-buttonmain">Coursera</button> 
@@ -35,5 +35,9 @@
     </a>
     <a href="live_note/note&skills.html">
       <button class="button button-buttonsub6">my notes</button>
+    </a>
+    <a href="trial.html">
+      <button class="button button-buttonsub7">testpage</button>
+    </a>
   </body>
 </html>
