--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -7,9 +7,7 @@
 </head>
 <body background="background_of_notes.jpg">
     <a href="evenotes/JAVA.html">
-        <button class="button button-buttonmain">
-            JAVA
-        </button>
+        <button class="button button-buttonmain">JAVA</button>
     </a>
 </body>
 </html>
