brand new pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="loading.css">
   </head>
   <body>
+    <div class="menu">
+      <div class="item">MOOC_Classes
+        <div class="subitem">
+          <a href="http://www.coursera.org" target="_blank">
+            <button class="button button-buttonmain">Coursera</button> 
+          </a>
+        </div>
+
+      </div>
+    </div>
     <!--  get a button link to www.cousera.com and make the button in a css style-->
     <a href="http://www.coursera.org" target="_blank">
       <button class="button button-buttonmain">Coursera</button> 
