brand new pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -9,5 +9,7 @@
     <a href="evenotes/JAVA.html">
         <button class="button button-buttonmain">JAVA</button>
     </a>
+    <a href="evenotes/JAVAlearniningfromCS61B.html">
+        <button class="button button-buttonsub">CS61B</button>
 </body>
 </html>
