brand new pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -5,11 +5,14 @@
     <!-- Inside a subdirectory called styles inside the current directory -->
     <link rel="stylesheet" href="notesdecoration.css">
 </head>
-<body background="background_of_notes.jpg">
-    <a href="evenotes/JAVA.html">
-        <button class="button button-buttonmain">JAVA</button>
-    </a>
-    <a href="evenotes/JAVAlearniningfromCS61B.html">
-        <button class="button button-buttonsub">CS61B</button>
+<body>
+    <div class="menu">
+        <div class="item">
+            <a href="evenotes/JAVA.html">JAVA</a>
+        </div>
+        <div class="item">
+            <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
+        </div>
+    </div>
 </body>
 </html>
