brand new pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="menu">
-        <div class="item">
-            <a href="evenotes/JAVA.html">JAVA</a>
-        </div>
-        <div class="item">
-            <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
+        <div class="item">JAVA
+            <div class="nav">
+                <a href="evenotes/JAVA.html">JAVA</a>
+                <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
+            </div>
         </div>
     </div>
 </body>
