brand new pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -13,6 +13,11 @@
                 <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
             </div>
         </div>
+        <div class="item">软工计算
+            <div class="nav">
+                <a href="evenotes/lambda.html">lambda</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
