--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -9,13 +9,19 @@
     <div class="menu">
         <div class="item">JAVA
             <div class="nav">
-                <a href="evenotes/JAVA.html">JAVA</a>
+                <a href="evenotes/JAVA.html">JAVA_notes</a>
                 <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
             </div>
         </div>
         <div class="item">软工计算
             <div class="nav">
                 <a href="evenotes/lambda.html">lambda</a>
+            </div>
+        </div>
+        <div class="item">PYTHON
+            <div class="nav">
+                <a href="evenotes/PYTHON.html">PYTHON_notes</a>
+                <a href="evenotes/PYTHONexamples.html">examples</a>
             </div>
         </div>
     </div>
