a new test page

--- a/trial.html
+++ b/trial.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="test.css"></link>
+<link rel="stylesheet" href="style.css"></link>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750 500" preserveAspectRatio="xMidYMax slice">
