some failed test on test pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -44,6 +44,11 @@
                 <a href="evenotes/PYTHONexamples.html">examples</a>
             </div>
         </div>
+        <div class="item">Machine Learnig
+            <div class="nav">
+                <a href="evenotes/CS229.html">CS229</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
