some failed test on test pages

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
     <a href="trial.html">
       <button class="button button-buttonsub7">testpage</button>
     </a>
+    <a href="live_note/files/ML-advice.pdf">
+      <button class="button button-buttonsub8">ML-advice</button>
+    </a>
   </body>
 </html>
