--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -50,5 +50,7 @@
             </div>
         </div>
     </div>
+    <a href="https://sp21.datastructur.es/" target="_blank">
+        <button class="button button-buttonsub">Data Structure</button>
 </body>
 </html>
