--- a/trial.html
+++ b/trial.html
@@ -4,10 +4,11 @@
     <title>My Example Web Page</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
 </head>
 <body>
     <script type="text/javascript" src="script.js"></script>
+    <div>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750 500" preserveAspectRatio="xMidYMax slice">
         <defs>
           <!-- Scene 1 Gradient -->
@@ -255,7 +256,7 @@
           </g>
         </g>
       </svg>
-      
+      </div>
       <div class="scrollElement"></div>
       
       <a href="https://codepen.io/collection/DxkYzq" target="_blank" class="btn btn_works">My Works</a>
