some failed test on test pages

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -41,7 +41,7 @@
         <div class="item">PYTHON
             <div class="nav">
                 <a href="evenotes/PYTHON.html">PYTHON_notes</a>
-                <a href="evenotes/PYTHONexamples.html">examples</a>
+                <a href="evenotes/PYTHON_Example.html">examples</a>
             </div>
         </div>
         <div class="item">Machine Learnig
