--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -46,7 +46,7 @@
         </div>
         <div class="item">Machine Learnig
             <div class="nav">
-                <a href="evenotes/CS229.html">CS229</a>
+                <a href="evenotes/files/cs229-notes6.pdf">CS229</a>
             </div>
         </div>
     </div>
