--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -36,6 +36,7 @@
         <div class="item">软工计算
             <div class="nav">
                 <a href="evenotes/lambda.html">lambda</a>
+                <a href="evenotes/编程基础与程序结构.html">编程基础与程序结构</a>
             </div>
         </div>
         <div class="item">PYTHON
