--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -41,7 +41,7 @@
         </div>
         <div class="item">PYTHON
             <div class="nav">
-                <a href="evenotes/PYTHON.html">PYTHON_notes</a>
+                <a href="evenotes/Python.html">PYTHON_notes</a>
                 <a href="evenotes/Python_Example.html">examples</a>
             </div>
         </div>
