--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
     <a href="live_note/files/ML-advice.pdf">
       <button class="button button-buttonsub8">ML-advice</button>
     </a>
+    <a href="https://composingprograms.netlify.app/sicp-python/intro">
+      <button class="button button-buttonsub9">SICP</button>
+    </a>
   </body>
 </html>
