--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -26,6 +26,7 @@
           <span id="stars-count">0</span>
         </a>
     </div>
+    <div><img src="可怜.gif" class="pictures" href="https://github.com/freezetheflame/freezetheflame.github.io"></div>
     <div class="menu">
         <div class="item">JAVA
             <div class="nav">
