--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -32,6 +32,7 @@
             <div class="nav">
                 <a href="evenotes/JAVA.html">JAVA_notes</a>
                 <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
+                <a href="evenotes/Java_Example.html">Java_Example</a>
             </div>
         </div>
         <div class="item">软工计算
