--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -52,6 +52,11 @@
                 <a href="evenotes/files/cs229-notes6.pdf">CS229</a>
             </div>
         </div>
+        <div class="item">后端笔记
+            <div class="nav">
+                <a href="backend_notes/backend.html">稀土掘金</a>
+            </div>
+        </div>
     </div>
     <a href="https://sp21.datastructur.es/" target="_blank">
         <button class="button button-buttonsub">Data Structure</button>
