update the backend content

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -30,7 +30,7 @@
     <div class="menu">
         <div class="item">JAVA
             <div class="nav">
-                <a href="evenotes/JAVA.html">JAVA_notes</a>
+                <a href="evenotes/Java_notes.html">JAVA_notes</a>
                 <a href="evenotes/JAVAlearniningfromCS61B.html">CS61B</a>
                 <a href="evenotes/Java_Example.html">Java_Example</a>
             </div>
