update the backend content

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -55,6 +55,7 @@
         <div class="item">后端笔记
             <div class="nav">
                 <a href="backend_notes/backend.html">稀土掘金</a>
+                <a href="backend_notes/Go basics.html">GO_NOTES</a>
             </div>
         </div>
     </div>
