--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <a href="/inside_blog/index.html">
       <button class="button button-buttonsub5">index</button>
     </a>
+    <a href="fanciful-jalebi-193b28.netlify.app">
+      <button class="button button-buttonsub11">GPT</button>
+    </a>
     <script async src="https://cse.google.com/cse.js?cx=903ddd18d53d949e4">
     </script>
     <form action="https://cse.google.com/cse?cx=903ddd18d53d949e4" class="form">
