add something about DNS

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -56,6 +56,7 @@
             <div class="nav">
                 <a href="backend_notes/backend.html">稀土掘金</a>
                 <a href="backend_notes/Go basics.html">GO_NOTES</a>
+                <a href="backend_notes/Freeze.html">Add_something</a>
             </div>
         </div>
     </div>
