a brilliant search bar

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -59,6 +59,17 @@
                 <a href="backend_notes/Freeze.html">Add_something</a>
             </div>
         </div>
+        <div class="item">前端笔记
+            <div class="nav">
+                <a href="frontend_notes/HTML.html">HTML(下面都没了,copilot帮我加的)</a>
+                <a href="frontend_notes/CSS.html">CSS</a>
+                <a href="frontend_notes/JavaScript.html">JavaScript</a>
+                <a href="frontend_notes/React.html">React</a>
+                <a href="frontend_notes/Node.js.html">Node.js</a>
+                <a href="frontend_notes/TypeScript.html">TypeScript</a>
+                <a href="frontend_notes/webpack.html">webpack</a>
+            </div>
+        </div>
     </div>
     <a href="https://sp21.datastructur.es/" target="_blank">
         <button class="button button-buttonsub">Data Structure</button>
