--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>My HTML Test Page</title>
     <!-- Inside a subdirectory called styles inside the current directory -->
     <link rel="stylesheet" href="loading.css">
