--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -61,7 +61,7 @@
         </div>
         <div class="item">前端笔记
             <div class="nav">
-                <a href="frontend_notes/HTML.html">HTML(下面都没了,copilot帮我加的)</a>
+                <a href="frontend_notes/HTML.html">HTML</a>
                 <a href="frontend_notes/CSS.html">CSS</a>
                 <a href="frontend_notes/JavaScript.html">JavaScript</a>
                 <a href="frontend_notes/React.html">React</a>
