--- a/trial.html
+++ b/trial.html
@@ -16,7 +16,7 @@
   <input type="submit" />
 </form>
 <h4>&nbsp;</h4>
-<p>Click search, Enter to submit</p>
+<p>Click to give prompt, Enter to ask</p>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
 
