js file Chinese

--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -64,6 +64,7 @@
                 <a href="frontend_notes/HTML.html">HTML</a>
                 <a href="frontend_notes/CSS.html">CSS</a>
                 <a href="frontend_notes/JavaScript.html">JavaScript</a>
+                <a href="frontend_notes/JavaScript风格.html">JavaScript(Chinese edition)</a>
                 <a href="frontend_notes/React.html">React</a>
                 <a href="frontend_notes/Node.js.html">Node.js</a>
                 <a href="frontend_notes/TypeScript.html">TypeScript</a>
