--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -49,7 +49,7 @@
         </div>
         <div class="item">Machine Learnig
             <div class="nav">
-                <a href="evenotes/files/cs229-notes6.pdf">CS229</a>
+                <a href="temp/watching.html">CS229</a>
             </div>
         </div>
         <div class="item">后端笔记
