--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <a href="/inside_blog/README.md" target="_blank">
       <button class="button button-buttonsub4">README</button>
     </a>
-    <a href="/inside_blog/index.html">
-      <button class="button button-buttonsub5">index</button>
+    <a href="photo_showing_place/photo.html">
+      <button class="button button-buttonsub5">pictures!!!</button>
     </a>
     <a href="https://fanciful-jalebi-193b28.netlify.app">
       <button class="button button-buttonsub11">GPT</button>
