--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="photo_showing_place/photo.html">
       <button class="button button-buttonsub5">pictures!!!</button>
     </a>
-    <a href="https://fanciful-jalebi-193b28.netlify.app">
+    <a href="https://gpt-of-mine.netlify.app">
       <button class="button button-buttonsub11">GPT</button>
     </a>
     <script async src="https://cse.google.com/cse.js?cx=903ddd18d53d949e4">
