--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -72,6 +72,11 @@
                 <a href="frontend_notes/webpack.html">webpack</a>
             </div>
         </div>
+        <div class ="item">数学相关
+                <div class = "nav">
+                    <a href="pdf_notes/Calculus.html">Calculus</a>
+                </div>
+        </div>
     </div>
     <a href="https://sp21.datastructur.es/" target="_blank">
         <button class="button button-buttonsub">Data Structure</button>
