--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -74,7 +74,7 @@
         </div>
         <div class ="item">数学相关
                 <div class = "nav">
-                    <a href="pdf_notes/Calculus.html">Calculus</a>
+                    <a href="pdf_notes/calculus.html">Calculus</a>
                 </div>
         </div>
     </div>
