--- a/live_note/note&skills.html
+++ b/live_note/note&skills.html
@@ -40,6 +40,7 @@
                 <a href="evenotes/lambda.html">lambda</a>
                 <a href="evenotes/编程基础与程序结构.html">编程基础与程序结构</a>
                 <a href="evenotes/编程范式总结归纳.html">编程范式总结归纳</a>
+                <a href="pdf_notes/名词解释.html">名词解释</a>
             </div>
         </div>
         <div class="item">PYTHON
