--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>My HTML Test Page</title>
     <!-- Inside a subdirectory called styles inside the current directory -->
-    <link rel="stylesheet" href="loading.css">
+    <link rel="stylesheet" href="main_page.css">
   </head>
   <body>
     <!--  get a button link to www.cousera.com and make the button in a css style-->
